Hugo: Fix scrolling issues in codeblock
- Move highlight config from config.toml to markup.toml
- Make sure horizontal overflow doesn't get wrapped but gets a scrollbar
- Make sure vertical overflow for pre doesn't get cut of but shows
  all content. Remove height: 100% from css because this only works when
  pre or highlight is the only child which is not the case.
- Use flex to make last highlight or pre tag in a column fill out the
  remaining space.

For: https://linear.app/usmedia/issue/CUE-177 and
     https://linear.app/usmedia/issue/CUE-176

--- a/hugo/assets/scss/components/highlight.scss
+++ b/hugo/assets/scss/components/highlight.scss
@@ -3,7 +3,6 @@
 @import '../mixins/screen';
 
 .highlight {
-    height: 100%;
     margin-bottom: 1rem;
     position: relative;
 
